[project]
name = "quantz"
version = "0.2.0"
description = "Multi-provider LangGraph agent for real-time stock news sentiment analysis with XGBoost delta prediction"
authors = [
    { name = "freecaykes", email = "ecandra@protonmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["langgraph", "stock-market", "sentiment-analysis", "xgboost", "llm", "finance"]

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-xai>=0.1.0", # For Grok / xAI
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "pandas-ta>=0.4.71b0",
    "xgboost>=2.1.0",
    "joblib>=1.3.0",
    "numpy>=2.26.0",
    "asyncio>=3.4.3", # Usually already in stdlib, but safe
    "scikit-learn>=1.5.0"
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "python-dotenv>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "B", "I", "W", "C4", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]

[project.scripts]
stock-agent = "main:main"   # Will run `asyncio.run(main())` if you create main.py

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
